<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="105dp"
        android:layout_height="100dp"
        android:layout_marginStart="150dp"

        android:src="@drawable/spotify" />

    <TextView
        android:id="@+id/resitered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="18dp"
        android:text="Registration Page"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />
    


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/Username"
                android:inputType="textAutoComplete"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/Password"
                android:inputType="textAutoComplete"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="18dp"
                android:text="Select Course"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:columnCount="3"
                android:rowCount="3">

                <CheckBox
                    android:id="@+id/C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/C"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/Java"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/java"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/Ruby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/Ruby"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/Javascript"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/Javascript"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/Python"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="Python"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/CSS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/CSS"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/HTML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/HTML"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/PHP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/PHP"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/MYSQL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/MYSQL"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </GridLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="18dp"
                android:text="Gender"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="">

                <RadioButton
                    android:id="@+id/r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/Male"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/Female"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/r3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/Other"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="18dp"
                android:text="Birthdate"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dob_calender"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="60dp"
                android:autofillHints="17/06/2003"
                android:background="@drawable/bg"

                android:gravity="left|center"
                android:hint="@string/SelectDate"
                android:inputType="date"
                android:textColor="@color/white"
                android:textColorHint="@color/white"

                tools:ignore="RtlHardcoded,TextViewEdits" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="18dp"
                android:text="Address"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="60dp"
                android:background="@drawable/bg"
                android:gravity="left|center"
                android:inputType="textPostalAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="DuplicateIds,RtlHardcoded,TextViewEdits" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:padding="18dp"
                android:text="Select City"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_cities"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:entries="@array/city_list"
                android:spinnerMode="dropdown"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="18dp"
                android:text="Upload Your Photograph"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/photo"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="60dp"
                    android:gravity="left|center"
                    android:background="@drawable/bg"
                    android:paddingHorizontal="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"

                    tools:ignore="RtlHardcoded,TextViewEdits" />

                <ImageView
                    android:id="@+id/selectedPhotoView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:src="@drawable/img"/>





            </LinearLayout>

            <Switch
                android:id="@+id/btnswitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:text="Disclaimer please fille all the fields correctly to ensure your registration"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="50dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:src="@drawable/bg"
                android:text="Register"
                android:textColor="#3884f1"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>